# tessera

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: batch.py  deps.py  generate.py  logo.py  presets.py
backend/app/core/: colors.py  encoders.py  logo.py  presets.py  qr.py
backend/app/models/: __init__.py  qr_config.py
backend/tests/: test_encoders.py  test_generator.py  test_logo.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: ApiPanel.tsx  BatchDialog.tsx  DataForms.tsx  ExportPanel.tsx  Header.tsx  Hero.tsx  HistoryPanel.tsx  LogoUpload.tsx  PacksManager.tsx  QRPreview.tsx  Section.tsx  StyleControls.tsx  TemplatesGallery.tsx
frontend/src/context/: QRContext.tsx  Toaster.tsx  qr-store.ts  toaster-store.ts
frontend/src/hooks/: useQR.ts  useQRImage.ts  useTheme.ts  useToaster.ts
frontend/src/lib/: api.ts  defaults.ts  prune-snippet-request.ts  storage.ts  utils.ts
frontend/src/types/: qr.ts
